--- a/src/ResourceManager/Resources/Commands.Resources/Properties/Resources.resx
+++ b/src/ResourceManager/Resources/Commands.Resources/Properties/Resources.resx
@@ -201,7 +201,7 @@
   <data name="InvalidTagFormat" xml:space="preserve">
     <value>Invalid tag format. Expect @{Name = "tagName"} or @{Name = "tagName"; Value = "tagValue"}</value>
   </data>
-  <data name="InvalidTagFormat" xml:space="preserve">
-    <value>Invalid tag format. Expect @{Name = "tagName"} or @{Name = "tagName"; Value = "tagValue"}</value>
+  <data name="RemovingRoleAssignment" xml:space="preserve">
+    <value>Removing role assignment for principal '{0}' that uses role definition '{1}'..</value>
   </data>
 </root>
