--- a/src/ServiceManagement/Services/Commands.Utilities/Properties/Resources.resx
+++ b/src/ServiceManagement/Services/Commands.Utilities/Properties/Resources.resx
@@ -1583,4 +1583,7 @@ use and privacy statement at &lt;url&gt; and (c) agree to sharing my contact inf
   <data name="ErrorCreatingVMNetwork" xml:space="preserve">
     <value>Error creating VMNetwork</value>
   </data>
+  <data name="SpecifyCreateACSNamespace" xml:space="preserve">
+    <value>Please specify CreateACSNamespace as true or false for better future compatibility.</value>
+  </data>
 </root>
