--- a/src/ResourceManager/Resources/Commands.Resources/Properties/Resources.resx
+++ b/src/ResourceManager/Resources/Commands.Resources/Properties/Resources.resx
@@ -202,7 +202,7 @@
     <value>Invalid tag format. Expect @{Name = "tagName"} or @{Name = "tagName"; Value = "tagValue"}</value>
   </data>
   <data name="RemovingRoleAssignment" xml:space="preserve">
-    <value>Removing role assignment for principal '{0}' that uses role definition '{1}'..</value>
+    <value>Removing role assignment..</value>
   </data>
   <data name="InvalidTagFormatNotUniqueName" xml:space="preserve">
     <value>Invalid tag format. Ensure that each tag has a unique name. Example: @{Name = "tagName1"; Value = "tagValue1"}, @{Name = "tagName2"; Value = "tagValue2"}</value>
