--- a/src/Common/Commands.Common/Properties/Resources.resx
+++ b/src/Common/Commands.Common/Properties/Resources.resx
@@ -1534,4 +1534,7 @@ use and privacy statement at &lt;url&gt; and (c) agree to sharing my contact inf
   <data name="CredentialOrganizationIdMessage" xml:space="preserve">
     <value>-Credential parameter can only be used with Organization ID credentials. For more information, please refer to http://go.microsoft.com/fwlink/?linkid=331007&amp;clcid=0x409 for more information about the difference between an organizational account and a Microsoft account.</value>
   </data>
+  <data name="AddAccountNonInteractiveGuestOrFpo" xml:space="preserve">
+    <value>Skipping external tenant {0}, of which you are a guest or an FPO. In order to access this tenant, please run Add-AzureAccount without "-Credential".</value>
+  </data>
 </root>
