--- a/src/ServiceManagement/Compute/Commands.ServiceManagement/Properties/Resources.resx
+++ b/src/ServiceManagement/Compute/Commands.ServiceManagement/Properties/Resources.resx
@@ -761,6 +761,11 @@ The file needs to be a PowerShell script (.ps1 or .psm1).</value>
     <value>Cannot delete '{0}': {1}</value>
     <comment>{0} is the path of a file, {1} is an error message</comment>
   </data>
+  <data name="AzureVMDscWrongSettingsFormat" xml:space="preserve">
+    <value>Cannot deserialize settings string from DSC extension. Updating your Azure PowerShell SDK to the latest version may solve this problem. Settings string:
+{0}</value>
+    <comment>{0} settings json string</comment>
+  </data>
   <data name="UnableToDecodeBase64String" xml:space="preserve">
     <value>Unable to decode string from base 64. Please make sure the string is correctly encoded: {0}.</value>
     <comment>{0} is the string that is not in a valid base 64 format.</comment>
