Fix unclosed data node

--- a/src/Common/Commands.Common/Properties/Resources.resx
+++ b/src/Common/Commands.Common/Properties/Resources.resx
@@ -1536,6 +1536,7 @@ use and privacy statement at &lt;url&gt; and (c) agree to sharing my contact inf
   </data>
   <data name="AddAccountNonInteractiveGuestOrFpo" xml:space="preserve">
     <value>Skipping external tenant {0}, because you are using a guest or a foreign principal object identity. In order to access this tenant, please run Add-AzureAccount without "-Credential".</value>
+  </data>
   <data name="RemoveEnvironmentConfirmation" xml:space="preserve">
     <value>Removing an environment will remove all associated subscriptions and accounts. Are you sure you want to remove an environment '{0}'?</value>
   </data>
