Textual change for NoSubscriptionAddedMessage

--- a/src/Common/Commands.Common/Properties/Resources.resx
+++ b/src/Common/Commands.Common/Properties/Resources.resx
@@ -1556,6 +1556,6 @@ use and privacy statement at &lt;url&gt; and (c) agree to sharing my contact inf
     <value>Illegal credential type</value>
   </data>
   <data name="NoSubscriptionAddedMessage" xml:space="preserve">
-    <value>There is no subscription found to be associated with account {0}.</value>
+    <value>There is no subscription associated with account {0}.</value>
   </data>
 </root>
