--- a/src/Common/Commands.Common.Test/Properties/Resources.resx
+++ b/src/Common/Commands.Common.Test/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="ValidProfileChina" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\validprofilechina.publishsettings;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="ValidProfileChinaOld" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\validprofilechinaold.publishsettings;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
