--- a/src/Common/Commands.Common/Properties/Resources.resx
+++ b/src/Common/Commands.Common/Properties/Resources.resx
@@ -1558,4 +1558,7 @@ use and privacy statement at &lt;url&gt; and (c) agree to sharing my contact inf
   <data name="NoSubscriptionAddedMessage" xml:space="preserve">
     <value>There is no subscription associated with account {0}.</value>
   </data>
+  <data name="ServiceKeyNotFound" xml:space="preserve">
+    <value>Unable to retrieve service key for ServicePrincipal account {0}. Please run the Add-AzureAccount cmdlet to supply the credentials for this service principal.</value>
+  </data>
 </root>
