--- a/src/ResourceManager/DataFactories/Commands.DataFactories/Properties/Resources.resx
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories/Properties/Resources.resx
@@ -124,7 +124,9 @@
     <value>Creating data factory '{0}' in resource group '{1}'.</value>
   </data>
   <data name="DataFactoryExists" xml:space="preserve">
-    <value>A data factory with the name {0} in the resource group {1} exists. Continuing execution may overwrite the exisiting one. Are you sure you want to continue?</value>
+    <value>A data factory with the name {0} in the resource group {1} exists. 
+Continuing execution may overwrite the exisiting one. 
+Are you sure you want to continue?</value>
   </data>
   <data name="DataFactoryNotFound" xml:space="preserve">
     <value>Data factory '{0}' does not exist in the resource group '{1}'.</value>
@@ -132,12 +134,32 @@
   <data name="DataFactoryRemoving" xml:space="preserve">
     <value>Removing data factory '{0}' in resource group '{1}'.</value>
   </data>
+  <data name="ExtractedNameFromJsonMismatchWarning" xml:space="preserve">
+    <value>{0} name provided using -Name switch: '{1}' in cmdlet doesn't match with {0} name: '{2}' in JSON file. {0} will be created with name: '{1}'</value>
+  </data>
   <data name="FormattedCloudExceptionMessageTemplate" xml:space="preserve">
     <value>HTTP Status Code: {0}
 Error Code: {1}
 Error Message: {2}
 Request Id: {3}
 Timestamp (Utc):{4}</value>
+  </data>
+  <data name="LinkedServiceConfirmationMessage" xml:space="preserve">
+    <value>Are you sure you want to remove linked service '{0}' in data factory '{1}'?</value>
+  </data>
+  <data name="LinkedServiceCreating" xml:space="preserve">
+    <value>Creating linked service '{0}' in data factory '{1}'.</value>
+  </data>
+  <data name="LinkedServiceExists" xml:space="preserve">
+    <value>A linked service with the name {0} in the data factory {1} exists. 
+Continuing execution may overwrite the exisiting one. 
+Are you sure you want to continue?</value>
+  </data>
+  <data name="LinkedServiceNotFound" xml:space="preserve">
+    <value>Linked service '{0}' does not exist in the data factory '{1}'.</value>
+  </data>
+  <data name="LinkedServiceRemoving" xml:space="preserve">
+    <value>Removing linked service '{0}' in data factory '{1}'.</value>
   </data>
   <data name="ResourceGroupNameCannotBeEmpty" xml:space="preserve">
     <value>Resource group name cannot be null.</value>
