--- a/src/ResourceManager/DataFactories/Commands.DataFactories/Properties/Resources.resx
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories/Properties/Resources.resx
@@ -164,4 +164,21 @@ Are you sure you want to continue?</value>
   <data name="ResourceGroupNameCannotBeEmpty" xml:space="preserve">
     <value>Resource group name cannot be null.</value>
   </data>
+  <data name="TableConfirmationMessage" xml:space="preserve">
+    <value>Are you sure you want to remove table '{0}' in data factory '{1}'?</value>
+  </data>
+  <data name="TableCreating" xml:space="preserve">
+    <value>Creating table '{0}' in data factory '{1}'.</value>
+  </data>
+  <data name="TableExists" xml:space="preserve">
+    <value>A table with the name {0} in the data factory {1} already exists. 
+Continuing execution will overwrite the exisiting one. 
+Are you sure you want to continue?</value>
+  </data>
+  <data name="TableNotFound" xml:space="preserve">
+    <value>Table '{0}' does not exist in data factory '{1}'.</value>
+  </data>
+  <data name="TableRemoving" xml:space="preserve">
+    <value>Removing table '{0}' in data factory '{1}'.</value>
+  </data>
 </root>
