--- a/src/Common/Commands.Common/Properties/Resources.resx
+++ b/src/Common/Commands.Common/Properties/Resources.resx
@@ -1392,7 +1392,7 @@ use and privacy statement at &lt;url&gt; and (c) agree to sharing my contact inf
     <value>The subscription data file {0} does not exist.</value>
   </data>
   <data name="SubscriptionIdNotFoundMessage" xml:space="preserve">
-    <value>The provided subscription name doesn't exist in the imported publish profile. If subscriptions have changed for the hosted service, retrieve an updated profile by using Get-AzurePublishSettingsFile then import the profile using Import-AzurePublishSettingsFile</value>
+    <value>The subscription id {0} doesn't exist.</value>
   </data>
   <data name="SubscriptionNameNotFoundMessage" xml:space="preserve">
     <value>The subscription name {0} doesn't exist.</value>
