--- a/src/ResourceManager/Batch/Commands.Batch/Properties/Resources.resx
+++ b/src/ResourceManager/Batch/Commands.Batch/Properties/Resources.resx
@@ -135,6 +135,9 @@
   <data name="InvalidEndpointType" xml:space="preserve">
     <value>The endpoint is not recognized as valid: {0}</value>
   </data>
+  <data name="InvalidResourceId" xml:space="preserve">
+    <value>The resource ID is not recognized as valid: {0}</value>
+  </data>
   <data name="InvalidTagFormat" xml:space="preserve">
     <value>Invalid tag format. Expect @{Name = "tagName"} or @{Name = "tagName"; Value = "tagValue"}</value>
   </data>
