Small changes to Compute cmdlets

--- a/src/ServiceManagement/Compute/Commands.ServiceManagement/Properties/Resources.resx
+++ b/src/ServiceManagement/Compute/Commands.ServiceManagement/Properties/Resources.resx
@@ -790,7 +790,10 @@ The file needs to be a PowerShell script (.ps1 or .psm1).</value>
   <data name="DeprecationOfTheGeoReplicationEnabledParamInTheGetCmdlet" xml:space="preserve">
     <value>GeoReplicationEnabled property will be deprecated in a future release of Azure PowerShell. The value will be merged into the AccountType property.</value>
   </data>
-  <data name="ErrorVmIsNotDirectlyAssociatedWithNetworkSecurityGroup" xml:space="preserve">
+  <data name="CannotRemoveNetworkSecurityGroupBecauseNotDirectlyAssociatedwithVm" xml:space="preserve">
     <value>Cannot remove Network Security Group "{0}" from Virtual Machine "{1}" because it is not directly.</value>
+  </data>
+  <data name="WarningVmIsNotDirectlyAssociatedWithNetworkSecurityGroup" xml:space="preserve">
+    <value>VM "{0}" is not currently associated with a Network Security Group.</value>
   </data>
 </root>
