--- a/src/ServiceManagement/Services/Commands.Utilities/Properties/Resources.resx
+++ b/src/ServiceManagement/Services/Commands.Utilities/Properties/Resources.resx
@@ -1395,7 +1395,7 @@ use and privacy statement at &lt;url&gt; and (c) agree to sharing my contact inf
   <data name="FailedToCleanUpLocalPackage" xml:space="preserve">
     <value>Could not delete emulator package '{0}' for the service. Please ensure that no files or folders in the package are open in other programs</value>
   </data>
-  <data name="FailedToCreateLocalPackage" xml:space="preserve">
+  <data name="FailedToCreatePackage" xml:space="preserve">
     <value>Failed to generate package. Error: {0}."</value>
   </data>
   <data name="StopStorageEmulatorCommandArgument" xml:space="preserve">
