--- a/src/Common/Commands.Common/Properties/Resources.resx
+++ b/src/Common/Commands.Common/Properties/Resources.resx
@@ -1567,4 +1567,10 @@ use and privacy statement at &lt;url&gt; and (c) agree to sharing my contact inf
   <data name="ServiceKeyNotFound" xml:space="preserve">
     <value>Unable to retrieve service key for ServicePrincipal account {0}. Please run the Add-AzureAccount cmdlet to supply the credentials for this service principal.</value>
   </data>
+  <data name="RemoveProfileConfirmation" xml:space="preserve">
+    <value>Removing the Azure profile will remove all associated environments, subscriptions, and accounts. Are you sure you want to remove the Azure profile?</value>
+  </data>
+  <data name="RemoveProfileMessage" xml:space="preserve">
+    <value>Removing the Azure profile</value>
+  </data>
 </root>
