--- a/src/ServiceManagement/Compute/Commands.ServiceManagement/Properties/Resources.resx
+++ b/src/ServiceManagement/Compute/Commands.ServiceManagement/Properties/Resources.resx
@@ -790,4 +790,10 @@ The file needs to be a PowerShell script (.ps1 or .psm1).</value>
   <data name="DeprecationOfTheGeoReplicationEnabledParamInTheGetCmdlet" xml:space="preserve">
     <value>GeoReplicationEnabled property will be deprecated in a future release of Azure PowerShell. The value will be merged into the AccountType property.</value>
   </data>
+  <data name="DuplicateNetworkInterfaceFound" xml:space="preserve">
+    <value>Duplicate NetworkInterface found on the VM</value>
+  </data>
+  <data name="NetworkInterfaceNotFound" xml:space="preserve">
+    <value>The specified NetworkInterface is not found</value>
+  </data>
 </root>
